<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GyroReader</string>
    <string name="action_settings">Settings</string>
    <string name="GyroX"> 0.0</string>
    <string name="GyroY"> 0.0</string>
    <string name="GyroZ"> 0.0</string>
    <string name="TextGyroX">X: </string>
    <string name="TextGyroY">Y: </string>
    <string name="TextGyroZ">Z: </string>

</resources>
