<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/TextGyroX" />

        <TextView
            android:id="@+id/gyrox"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/GyroX" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/TextGyroY" />
        
         <TextView
             android:id="@+id/gyroy"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/GyroY" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/TextGyroZ" />
        
         <TextView
            android:id="@+id/gyroz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GyroZ" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:onClick="mSave"
        android:text="Connect" />

</LinearLayout>
